--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/baloo_da"
-        android:text="@string/vamos_rachar"
+        android:text="Vamos Rachar!"
         android:textColor="#0B0B0B"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,7 +26,6 @@
         android:layout_height="80dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:contentDescription="@string/descricao_valor_conta"
         app:layout_constraintEnd_toStartOf="@+id/edTextValor"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +53,6 @@
         android:layout_height="80dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:contentDescription="@string/descricao_numero_pessoas"
         app:layout_constraintEnd_toStartOf="@+id/edTextPessoa"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,7 +93,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:clickable="true"
-        android:contentDescription="@string/descricao_ouvir_valor_pago"
         android:elevation="2dp"
         app:backgroundTint="#28C39F"
         app:layout_constraintEnd_toEndOf="parent"
@@ -110,7 +107,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:clickable="true"
-        android:contentDescription="@string/descricao_compartilhar_valor_pago"
         android:elevation="2dp"
         app:backgroundTint="#28C39F"
         app:layout_constraintEnd_toStartOf="@+id/fActionTocar"
